Fix small width truncation

--- a/gui/public/core/css/header.css
+++ b/gui/public/core/css/header.css
@@ -8,8 +8,8 @@
     line-height: 60px;
     margin: 20px 0 0 20px;
     /* Minus the left padding */
-    width: -webkit-calc(100% - 20px);
-    width:         calc(100% - 20px);
+/*    width: -webkit-calc(100% - 20px);*/
+/*    width:         calc(100% - 20px);*/
 }
 
 /* Header Navigation
